--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,4 +2,4 @@ unbind C-b
 set -g prefix C-q
 bind C-q send-prefix
 
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /opt/homebrew/bin/fish
